# nki-autotune

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  benchmark_matmul.py  debug_kernel_0000_chain.py  generate_summary_pdf.py  install.sh  install_neuron.sh  kernel_transforms.py  learn_ast.py  nkigym_design.md  nkigym_ir_guide.md  pyproject.toml  pyrightconfig.json  remote.json.example  requirements.txt  run_lhsT_gemm.py  setup.py  test_design_doc.py  test_transform_docs.py  tmp_squeezed_kernel.py
autotune/: pyproject.toml
autotune/allocation/: utils.py
autotune/baseline/: __init__.py  nki_rmsnorm_linear.py  np_baselines.py  torch_matmul.py  torch_rmsnorm_linear.py  torch_utils.py
autotune/cache/: directories.py  loader.py  parameter_importance.py  results.py  visualize.py
autotune/core/: benchmark.py  compile.py  dma.py  gemm.py  gemm_config.py  golden.py  job.py  layout.py  lhsT_rhs.py  lhs_rhs.py  matmul.py  metrics.py  misc.py  parallel.py  reductions.py  run_nki.py  scalar_ops.py  tensor.py  tune.py  utils.py  visualize.py
autotune/gemm/: __init__.py  config.py  kernels.py  trn2-scoreboard.md  utils.py  validation.py
autotune/generation/: constant_propagate.py  gemm_generate.py  generate.py  inline.py  lhsT_rhs.py  llm_generation.py  loop_nest.py  meta_gemm.py  specialize.py
autotune/golden/: gemm.py  rmsnorm_linear.py
autotune/infra/: compile.py  processing.py
autotune/kernels/: matmul.py  rmsnorm_linear.py  rmsnorm_weighted.py  utils.py
autotune/legacy/: dma.py  layout.py
nkigym/: dev_notes.md  pyproject.toml
(+942 files in other folders)
