[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotune"
version = "0.1.0"
description = "NKI Autotune - Kernel optimization tools"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "tabulate",
    "tqdm",
    "pytest",
    "pre-commit",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
